---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 891
expression: "zizmor().input(input_under_test(\"undocumented-permissions/documented.yml\")).args([\"--persona=pedantic\"]).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:8:3
  |
8 |   packages: write # Needed to publish packages
  |   ^^^^^^^^^^^^^^^ packages: write is overly broad at the workflow level
  |
  = note: audit confidence → High

1 finding: 0 informational, 0 low, 0 medium, 1 high
